--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                         <br>
                         <span style="color:green">
                             <i>
-                                First degree relatives should be offered transthoracic echo for screening due to autosomal dominant inheritance.
+                                Increased prevalence in 1st degree relatives - all immediate family members should be offered routine transthoracic echo for screening.
                             </i>
                         </span>
                     </div>
@@ -940,18 +940,18 @@
                     <br><br>
                     <div class="block">
                         <span style="color:grey">
-                            <i>Generally due to known congenital abnormality - followed up by the Adult Congenital Heart Disease (ACHD) team.</i>
+                            <i>Generally due to known congenital abnormality - followed up by the Adult Congenital Heart Disease (ACHD) service.</i>
                         </span>
                         <br><br>
                         In most cases:
                         <br>
                         <span style="color:orange">
-                            Routine cardiology referral
+                            Routine Adult Congenital Heart Disease (ACHD) referral
                         </span>
                         <br><br>
                         If severe stenosis and any of the following features:
                         <span style="color:red">
-                                Urgent cardiology referral
+                                Urgent ACHD referral
                         </span>    
                         <br>
                         <div class="indent">
@@ -977,9 +977,9 @@
                         In most cases:
                         <span style="color:grey">
                             No routine follow-up
-                        </span>
                         <br><br>
-                        Anatomical abnormality:
+                        But, in rare cases of anatomical abnormality:
+                        </span>
                         <span style="color:orange">
                             Routine valve clinic referral
                         </span>
@@ -992,32 +992,31 @@
 
                     <b>Moderate pulmonary regurgitation:</b>
                     <div class="block">
-                        In most cases:
-                        <span style="color:green">
-                            Repeat echo in 2 years
+                        <span style="color:grey">
+                            <i>Generally due to known congenital abnormality - followed up by the Adult Congenital Heart Disease (ACHD) service.</i>
                         </span>
                         <br><br>
-                        Anatomical abnormality:
+                        In all cases:
                         <span style="color:orange">
-                            Routine valve clinic referral
-                        </span>
-                        <br>
-                        <span style="color:grey">
-                            <i>(i.e. Carcinoid, previous vegetation, previous valvuloplasty, pulmonary artery dilatation)</i>
+                            Routine Adult Congenital Heart Disease (ACHD) referral
                         </span>
                     </div>
                     <br>
 
                     <b>Severe pulmonary regurgitation:</b>
                     <div class="block">
+                        <span style="color:grey">
+                            <i>Generally due to known congenital abnormality - followed up by the Adult Congenital Heart Disease (ACHD) service.</i>
+                        </span>
+                        <br><br>
                         In most cases:
                         <span style="color:orange">
-                            Routine valve clinic referral
+                            Routine Adult Congenital Heart Disease (ACHD) referral
                         </span>
                         <br><br>
                         If any of the following features:
                         <span style="color:red">
-                                Urgent valve clinic referral
+                                Urgent ACHD referral
                         </span>    
                         <br>
                         <div class="indent">
