corrected institute spelling

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div style="text-align: center; margin-bottom: 20px;">
         <h1>GP Guidance</h1>
     </div>
-    <div>
+    <div class="block">
         Quick-reference guidance for summary statements on transthoracic echo reports for adult patients.
     <br><br>
         The objective is to help primary care physicians find the correct guidance quickly and without additional steps.
@@ -133,7 +133,7 @@
         <i>
             For GPs working in Bristol, North Somerset and South Gloucestershire ICB
             <br><br>
-            Authored by Bristol Heart Institue cardiology team.
+            Authored by Bristol Heart Institute cardiology team.
         </i></span>
     </div>
     <div class="heading h1" onclick="toggle(this)">
