--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,10 @@
             <div class="content h2-content">
                 <b>Mechanical Valve Replacements</b>
                 <div class="block">
-                    Including mechanical aortic valves (mAVR), mechanical mitral valves (mMVR) and mechanical tricupid valves (mTVR)
+                    Including:
+                    <br>- Mechanical aortic valve replacement (mAVR)
+                    <br>- Mechanical mitral valve replacement (mMVR)
+                    <br>- Mechanical tricupid valve replacement (mTVR)
                     <br><br>
                     In nearly all cases:
                     <span style="color:grey">
@@ -1089,13 +1092,13 @@
                 <b>Tissue Valve Replacements</b>
                 <div class="block">
                     Including:
-                    <br>- tissue aortic valves (bioAVR, TAVI)
-                    <br>- tissue mitral valves (bioMVR)
-                    <br>- tissue tricupid valves (bioTVR)
-                    <br>- tissue pulmonary valves (PPVI, Melody)
+                    <br>- Tissue aortic valve replacement (bioAVR, TAVI)
+                    <br>- Tissue mitral valve replacement (bioMVR)
+                    <br>- Tissue tricupid valve replacement (bioTVR)
+                    <br>- Tissue pulmonary valve replacement (PPVI, Melody)
                     <br><br>
                     In all cases:
-                    <span style="color:grey">
+                    <span style="color:orange">
                         Lifelong cardiologist-led follow-up
                     </span>
                 </div>
@@ -1110,7 +1113,7 @@
                     <br>- Pulmonary valves intervention (including pulmonary valvuloplasty)
                     <br><br>
                     In all cases:
-                    <span style="color:grey">
+                    <span style="color:orange">
                         Lifelong cardiologist-led follow-up
                     </span>
                 </div>
