--- a/index.html
+++ b/index.html
@@ -124,17 +124,14 @@
     <div style="text-align: center; margin-bottom: 20px;">
         <h1>GP Guidance (BNSSG)</h1>
     </div>
-    <div class="block">
+    <div class="block" style="text-align:center">
         Quick-reference guidance for summary statements on transthoracic echo reports for adult patients.
     <br><br>
         The objective is to help primary care physicians find the correct guidance quickly and without additional steps.
     <br><br>
         <span style="color:grey">
-        <i>
-            For GPs working in Bristol, North Somerset and South Gloucestershire ICB
-            <br><br>
-            Authored by Bristol Heart Institute cardiology team.
-        </i></span>
+            <i>For GPs working in Bristol, North Somerset and South Gloucestershire ICB</i>
+        </span>
     </div>
     <div class="heading h1" onclick="toggle(this)">
         <span class="arrow">▶</span>Impaired Left Ventricular Systolic or Diastolic Function</div>  
@@ -1075,28 +1072,32 @@
             <div class="content h2-content">
                 <b>Mechanical Valve Replacements</b>
                 <div class="block">
+                    <span style="color:grey"><i>
                     Including:
-                    <br>- Mechanical aortic valve replacement (mAVR)
-                    <br>- Mechanical mitral valve replacement (mMVR)
-                    <br>- Mechanical tricupid valve replacement (mTVR)
+                        <br>- Mechanical aortic valve replacement (mAVR)
+                        <br>- Mechanical mitral valve replacement (mMVR)
+                        <br>- Mechanical tricupid valve replacement (mTVR)
+                    </i></span>
                     <br><br>
                     In nearly all cases:
                     <span style="color:grey">
-                        No routine imaging surveillance or follow-up required
+                        No routine imaging surveillance required
                     <br><br>
-                    <i>Only if there is significant clinical change, or incidental finding of valve disfunction on other imagine would direct cardiology input be required.</i>
+                    <i>Only if there is significant clinical change, or incidental finding of valve disfunction on other imaging would direct cardiology input be required.</i>
                     </span>
                 </div>
                 <br>
 
                 <b>Tissue Valve Replacements</b>
                 <div class="block">
-                    Including:
-                    <br>- Tissue aortic valve replacement (bioAVR, TAVI)
-                    <br>- Tissue mitral valve replacement (bioMVR)
-                    <br>- Tissue tricupid valve replacement (bioTVR)
-                    <br>- Tissue pulmonary valve replacement (PPVI, Melody)
-                    <br><br>
+                    <span style="color:grey"><i>
+                        Including:
+                        <br>- Tissue aortic valve replacement (bioAVR, TAVI)
+                        <br>- Tissue mitral valve replacement (bioMVR)
+                        <br>- Tissue tricupid valve replacement (bioTVR)
+                        <br>- Tissue pulmonary valve replacement (PPVI, Melody)
+                    </i></span>
+                        <br><br>
                     In all cases:
                     <span style="color:orange">
                         Lifelong cardiologist-led follow-up
@@ -1106,11 +1107,13 @@
                 
                 <b>Surgical Valve Repairs</b>
                 <div class="block">
-                    Including:
-                    <br>- Aortic valve repair (Ozaki)
-                    <br>- Mitral valve repair (including Mitral TEER)
-                    <br>- Tricuspid valve repair (including Tricuspid TEER)
-                    <br>- Pulmonary valves intervention (including pulmonary valvuloplasty)
+                    <span style="color:grey"><i>
+                        Including:
+                        <br>- Aortic valve repair (Ozaki)
+                        <br>- Mitral valve repair (including Mitral TEER)
+                        <br>- Tricuspid valve repair (including Tricuspid TEER)
+                        <br>- Pulmonary valves intervention (including pulmonary valvuloplasty)
+                    </i></span>
                     <br><br>
                     In all cases:
                     <span style="color:orange">
