--- a/index.html
+++ b/index.html
@@ -117,11 +117,40 @@
         .indent {
             margin-left:0.5rem;
         }
+        
+        /* Home button */
+        .home-button {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+            padding: 8px 12px;
+            background-color: var(--bg-secondary);
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
+            transition: background-color 0.3s;
+        }
+
+        .home-button:hover {
+            background-color: var(--bg-tertiary);
+            text-decoration: none;
+        }
+
+        .home-icon {
+            width: 18px;
+            height: 18px;
+            color: var(--text-primary);
+        }
     </style>
 </head>
 <body>
     <div style="text-align: center; margin-bottom: 20px;">
-        <h1>GP Guidance (BNSSG)</h1>
+        <a href="https://echotools.uk" class="home-button">
+            <svg class="home-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" fill="currentColor"/>
+            </svg>
+        </a>
+        <h1 style="margin: 10px 0 0 0;">GP Guidance (BNSSG)</h1>
     </div>
     <div class="block" style="text-align:center">
         Quick-reference guidance for summary statements on transthoracic echo reports for adult patients.
